// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spartacus S4OM schematics: ng-add S4OM feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { S4omModule } from "@spartacus/s4om";
import { s4omTranslationChunksConfig, s4omTranslations } from "@spartacus/s4om/assets";
import { S4omRootModule } from "@spartacus/s4om/root";

@NgModule({
  declarations: [],
  imports: [
    S4omRootModule,
    S4omModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: s4omTranslations,
      chunks: s4omTranslationChunksConfig,
    },
  })]
})
export class S4omFeatureModule { }
"
`;

exports[`Spartacus S4OM schematics: ng-add S4OM feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { s4omTranslationChunksConfig, s4omTranslations } from "@spartacus/s4om/assets";
import { S4omRootModule, S4OM_FEATURE } from "@spartacus/s4om/root";

@NgModule({
  declarations: [],
  imports: [
    S4omRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [S4OM_FEATURE]: {
        module: () =>
          import('@spartacus/s4om').then((m) => m.S4omModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: s4omTranslations,
      chunks: s4omTranslationChunksConfig,
    },
  })
  ]
})
export class S4omFeatureModule { }
"
`;
